2001-10-30  Max Horn  <max@quendi.de>
	* added docs/xml: unified faq and readme
	* docs/faq, docs/readme: removed

2001-10-29  Dominik Reichardt <gigdr@tesionmail.de>
	* docs/faq and docs/readme: unified xsl and dtd files, changed makefiles
	  accordingly and updated exult_faq.xml/readme.xml
	* Faq, Readme updated

2001-10-27  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc: Don't teleport party members in 'wait' state.
	* actorio.cc: Try to fix messed-up polymorph flag.
	* actors.cc:  Automatons & 'waiting' NPC's shouldn't get cold.
	
	* gamewin.cc: Create Jawbone in create_ireg_object();
	* jawbone.cc: Removed extraneous get_next()'s.
	
	* usecode/intrinsics.cc: Find_in_owner replaced by find_object.
	Fixes switch-teleports beneath Sleeping Bull.

2001-10-26  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc: Cacheout tmp. objects when camera changes back to Avatar.
	* actors.cc: Give holder of Magebane special defense agains Vasculio.
	* usecode/conversation.cc (Conversation): Set frame # for face.

2001-10-25  Jeff Freedman  <jeff@amy.nerble.net>

	* paths.cc,actors.cc:  Pathfinding for > 1x1 NPC's was messed up.
	* drag.cc:  Set dragging_gump to 0 in one last place.

2001-10-25  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* credits.txt: added Oblivious as an artist

2001-10-24  Jeff Freedman  <jeff@amy.nerble.net>

	* combat.cc: Only auto-set hostile NPC's into combat mode (not
	chaotic).
	* gamewin.cc,objs/citerate.h,chunks.cc:  World-wrapping yet again.

2001-10-24  Ryan Nunn <triforce@merlin.net.au>
	* Too many files to even think about listing:
	  Added support for BG multiracial and added shapes. SI Required!
	  Changed lots of things to use ShapeID methods rather than the
	    Game_window alternatives.
	  Fixed Gump Problem

2001-10-23  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/ucsched.cc (Usecode_script): Purge() forces halt.

	* usecode/intrinsics.cc: Add moved NPC to 'nearby' list.