@@ -320,7 +320,7 @@ void Npc_hunger_timer::handle_event
 					// No longer a party member?
 	if ((npc != gwin->get_main_actor() && npc->get_party_id() < 0) ||
 					//   or no longer hungry?
-	    npc->get_property((int) Actor::food_level) >= 0)
+	    npc->get_property(static_cast<int>(Actor::food_level)) >= 0)
 		{
 		delete this;
 		return;
@@ -334,8 +334,8 @@ void Npc_hunger_timer::handle_event
 			npc->say(first_starving, first_starving + 2);
 		npc->reduce_health(hp);
 
-//		npc->set_property((int) Actor::health,
-//			npc->get_property((int) Actor::health) - hp);
+//		npc->set_property(static_cast<int>(Actor::health),
+//			npc->get_property(static_cast<int>(Actor::health)) - hp);
 		last_time = minute;
 		}
 	gwin->get_tqueue()->add(curtime + 30000, this, 0L);
@@ -389,8 +389,8 @@ void Npc_poison_timer::handle_event
 		npc->say(first_ouch, last_ouch);
 	npc->reduce_health(penalty);
 
-//	npc->set_property((int) Actor::health,
-//		npc->get_property((int) Actor::health) - penalty);
+//	npc->set_property(static_cast<int>(Actor::health),
+//		npc->get_property(static_cast<int>(Actor::health)) - penalty);
 					// Check again in 10-20 secs.
 	gwin->get_tqueue()->add(curtime + 10000 + rand()%10000, this, 0L);
 	}
