@@ -1,3 +1,7 @@
+2001-10-31  Dancer Vesperman  <dancer@users.sourceforge.net>
+
+	* actions.cc, actors.cc, cheat.cc, combat.cc, monsters.cc, npctime.cc: Improved casts. This'd be a whole lot easier if you folks remembered to use them, you know :)
+
 2001-10-30  Max Horn  <max@quendi.de>
 	* added docs/xml: unified faq and readme
 	* docs/faq, docs/readme: removed
